Fix to room details overview box overflowing

--- a/src/targets/meandall/styles/components/section-image.less
+++ b/src/targets/meandall/styles/components/section-image.less
@@ -39,6 +39,7 @@ section-image {
     top: 575px;
     width: 100%;
     padding: 55px 0;
+    box-sizing:overview;
     .viewport-mobile & {
       top: initial;
       bottom: 35px;
